<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

     <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/equal"
    app:title="@string/app_name"
    android:padding="16dp"
    app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
    app:titleTextColor="@color/black"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#D8D0D0"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="48sp"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/_8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/_9"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:text="@string/Divide"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:text="@string/_5"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/_6"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            tools:ignore="ButtonStyle"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            tools:ignore="ButtonStyle,NestedWeights"
            />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/_2"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            android:text="@string/_3"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:onClick="onOperator"
            android:textSize="20sp"
            tools:ignore="ButtonStyle"

            android:text="@string/Minus" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"

        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/grey"
            android:onClick="onDecimalPoint"
            android:textColor="@color/white"
            android:text="@string/Dot"
            tools:ignore="ButtonStyle,NestedWeights"/>


        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:backgroundTint="@color/grey"
            android:textColor="@color/white"
            android:onClick="onDigit"
            tools:ignore="ButtonStyle,NestedWeights"
            />

        <Button
            android:id="@+id/btClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/clear"
            android:onClick="onClear"
            android:textColor="@color/black"
            android:text="@string/clr"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnPLus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue"
            android:onClick="onOperator"
            android:textColor="@color/white"
            android:text="@string/plus"
            tools:ignore="ButtonStyle"/>





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/Equals"
            android:textSize="20sp"
            android:backgroundTint="@color/equal"
            android:onClick="onEqual"
            android:textColor="@color/white"
            tools:ignore="NestedWeights,ButtonStyle" />

    </LinearLayout>



</LinearLayout>